# appwrite-utils-python

./: .gitignore  CHANGELOG.md  LICENSE  PACKAGE_SUMMARY.md  README.md  pyproject.toml  setup.py  test_client.py  test_import.py
appwrite_utils/: __init__.py  auth.py  cli.py  client.py  config.py  database.py  exceptions.py  files.py  types.py
examples/: basic_usage.py
tests/: test_basic.py
